--- a/src/options/components/ui/Radio/radio.pcss
+++ b/src/options/components/ui/Radio/radio.pcss
@@ -61,12 +61,15 @@
         display: block;
         margin-left: 12px;
         margin-top: 1px;
+        overflow: auto;
     }
 
     &__title,
     &__description {
         display: block;
         line-height: 1.3;
+        overflow: auto;
+        text-overflow: ellipsis;
     }
 
     &__title {
